// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`{before,after}All + concurrent 1`] = `
"add_hook: beforeAll
add_hook: afterAll
add_test: one
run_start
run_describe_start: 
hook_start: beforeAll
hook_success: beforeAll
test_start: one
test_started: one
test_fn_start: one
hello one
test_fn_failure: one
test_done: one
hook_start: afterAll
hook_success: afterAll
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`concurrent 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
add_test: describe > three
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_start: describe > two
test_start: describe > three
test_started: describe > one
test_started: describe > two
test_started: describe > three
test_fn_start: describe > one
test_fn_start: describe > two
test_fn_start: describe > three
hello one
hello two
hello three
test_fn_failure: describe > one
test_fn_success: describe > two
test_fn_success: describe > three
test_done: describe > one
test_done: describe > two
test_done: describe > three
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
add_test: describe > three
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_start: describe > two
test_start: describe > three
test_started: describe > one
test_started: describe > two
test_started: describe > three
test_fn_start: describe > one
test_fn_start: describe > two
test_fn_start: describe > three
hello one
hello two
hello three
test_fn_success: describe > one
test_fn_success: describe > two
test_fn_success: describe > three
test_done: describe > one
test_done: describe > two
test_done: describe > three
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeAll
add_hook: describe > afterAll
add_test: describe > one
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
hook_start: describe > beforeAll
test_started: describe > one
In describe
test_fn_start: describe > one
hello one
test_fn_failure: describe > one
test_done: describe > one
hook_success: describe > beforeAll
hook_start: describe > afterAll
In describe
hook_success: describe > afterAll
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent multiple times 1`] = `
"start_describe_definition: describe1
add_hook: describe1 > beforeAll
add_hook: describe1 > afterAll
add_test: describe1 > one
finish_describe_definition: describe1
start_describe_definition: describe2
add_hook: describe2 > beforeAll
add_hook: describe2 > afterAll
add_test: describe2 > two
finish_describe_definition: describe2
run_start
run_describe_start: 
run_describe_start: describe1
test_start: describe1 > one
test_start: describe2 > two
hook_start: describe1 > beforeAll
test_started: describe1 > one
test_started: describe2 > two
In describe1
test_fn_start: describe1 > one
test_fn_start: describe2 > two
hello one
hello two
test_fn_failure: describe1 > one
test_fn_success: describe2 > two
test_done: describe1 > one
test_done: describe2 > two
hook_success: describe1 > beforeAll
hook_start: describe1 > afterAll
In describe1
hook_success: describe1 > afterAll
run_describe_finish: describe1
run_describe_start: describe2
hook_start: describe2 > beforeAll
In describe2
hook_success: describe2 > beforeAll
hook_start: describe2 > afterAll
In describe2
hook_success: describe2 > afterAll
run_describe_finish: describe2
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
add_test: describe > three
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_start: describe > two
test_start: describe > three
test_skip: describe > one
test_skip: describe > two
test_skip: describe > three
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
add_test: describe > three
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_start: describe > two
test_start: describe > three
test_skip: describe > one
test_skip: describe > two
test_skip: describe > three
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`failures 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_started: describe > one
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > one
test_fn_failure: describe > one
hook_start: describe > afterEach
hook_failure: describe > afterEach
test_done: describe > one
test_start: describe > two
test_started: describe > two
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > two
test_fn_success: describe > two
hook_start: describe > afterEach
hook_failure: describe > afterEach
test_done: describe > two
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`function descriptors 1`] = `
"start_describe_definition: describer
add_test: describer > One
finish_describe_definition: describer
run_start
run_describe_start: 
run_describe_start: describer
test_start: describer > One
test_started: describer > One
test_fn_start: describer > One
test_fn_success: describer > One
test_done: describer > One
run_describe_finish: describer
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`nested describe.skip + concurrent 1`] = `
"start_describe_definition: describe
start_describe_definition: describe > nested
add_test: describe > nested > one
add_test: describe > nested > two
add_test: describe > nested > three
finish_describe_definition: describe > nested
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > nested > one
test_start: describe > nested > two
test_start: describe > nested > three
run_describe_start: describe > nested
test_skip: describe > nested > one
test_skip: describe > nested > two
test_skip: describe > nested > three
run_describe_finish: describe > nested
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;

exports[`simple test 1`] = `
"start_describe_definition: describe
add_hook: describe > beforeEach
add_hook: describe > afterEach
add_test: describe > one
add_test: describe > two
finish_describe_definition: describe
run_start
run_describe_start: 
run_describe_start: describe
test_start: describe > one
test_started: describe > one
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > one
test_fn_success: describe > one
hook_start: describe > afterEach
hook_success: describe > afterEach
test_done: describe > one
test_start: describe > two
test_started: describe > two
hook_start: describe > beforeEach
hook_success: describe > beforeEach
test_fn_start: describe > two
test_fn_success: describe > two
hook_start: describe > afterEach
hook_success: describe > afterEach
test_done: describe > two
run_describe_finish: describe
run_describe_finish: 
run_finish

unhandledErrors: 0"
`;
